# example-flaml-spark

./: .gitignore  pyproject.toml
_aux/: build.sbt
_aux/src/main/scala/model_eval/: XGBoostEval.scala
examples/: single_instance_flaml_xgboost_spark.py  xgboost_evaluator_in_pyspark.py
