[tool.poetry]
name = "flaml_spark"
version = "0.1.0"
description = ""
authors = ["Otto von Sperling <otto.sperling@transferwise.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.0"
FLAML = {extras = ["blendsearch"], version = "^0.9.3"}

[tool.poetry.dev-dependencies]
ipython = "^7.31.0"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
